force-app/main/default/objects/Correo__c/Correo__c.object-meta.xml
<CustomObject>
    <label>Correo</label>
    <nameField>
        <displayFormat>EMAIL-{000000000}</displayFormat>
        <label>Nombre de Correo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>