force-app/main/default/objects/Correo__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Correos</relationshipLabel>
    <relationshipName>Correos</relationshipName>
    <type>Lookup</type>
</CustomField>