force-app/main/default/objects/Correo__c/fields/CODIGOCLIENTE__c.field-meta.xml
<CustomField>
    <fullName>CODIGOCLIENTE__c</fullName>
    <label>Código del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>