force-app/main/default/objects/Correo__c/fields/Contactid__c.field-meta.xml
<CustomField>
    <fullName>Contactid__c</fullName>
    <label>Consecutivo del contacto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>