force-app/main/default/objects/Correo__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Correos</relationshipLabel>
    <relationshipName>Correos</relationshipName>
    <type>Lookup</type>
</CustomField>