force-app/main/default/objects/Correo__c/fields/Dateupdated__c.field-meta.xml
<CustomField>
    <fullName>Dateupdated__c</fullName>
    <label>Fecha de la ultima actualización</label>
    <type>Date</type>
</CustomField>