force-app/main/default/objects/Correo__c/fields/electronicaddresslinenumber__c.field-meta.xml
<CustomField>
    <fullName>electronicaddresslinenumber__c</fullName>
    <label>Consecutivo del correo electrónico</label>
    <length>10</length>
    <type>Text</type>
</CustomField>