force-app/main/default/objects/Correo__c/fields/electronicaddresstypecode__c.field-meta.xml
<CustomField>
    <fullName>electronicaddresstypecode__c</fullName>
    <label>Tipo de correo electrónico</label>
    <length>10</length>
    <type>Text</type>
</CustomField>