force-app/main/default/objects/Correo__c/fields/EMAILADDRESS__c.field-meta.xml
<CustomField>
    <fullName>EMAILADDRESS__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>