force-app/main/default/objects/Correo__c/fields/emailAux__c.field-meta.xml
<CustomField>
    <fullName>emailAux__c</fullName>
    <label>emailAux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>