force-app/main/default/objects/Correo__c/fields/ENTITYID__c.field-meta.xml
<CustomField>
    <fullName>ENTITYID__c</fullName>
    <label>ENTITYID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>