force-app/main/default/objects/Correo__c/fields/IdExterno_c__c.field-meta.xml
<CustomField>
    <fullName>IdExterno_c__c</fullName>
    <description>Formado por Código del cliente, contactid
electronicaddresslinenumber</description>
    <externalId>true</externalId>
    <label>IdExterno__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>