force-app/main/default/objects/Correo__c/fields/SEQUENCEEMAIL__c.field-meta.xml
<CustomField>
    <fullName>SEQUENCEEMAIL__c</fullName>
    <label>Secuencia del correo electrónico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>