force-app/main/default/objects/Correo__c/fields/TCONSECUTIVEEMAIL__c.field-meta.xml
<CustomField>
    <fullName>TCONSECUTIVEEMAIL__c</fullName>
    <label>Consecutivo del correo electrónico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>