force-app/main/default/objects/Correo__c/fields/Tipo_de_correo_electr_nico__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_correo_electr_nico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sugerencias: Email address, Internal address, Internet address</inlineHelpText>
    <label>Tipo de correo electrónico</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipos de eMail</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Correos</relationshipLabel>
    <relationshipName>Correos</relationshipName>
    <type>Lookup</type>
</CustomField>