force-app/main/default/objects/Correo__c/validationRules/Contacto_de_PAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacto_de_PAccount</fullName>
    <active>true</active>
    <description>Si el cliente es personal el contacto debe seleccionarse.</description>
    <errorConditionFormula>AND( Cliente__r.RecordType.DeveloperName = &apos;PersonAccount&apos;,
ISBLANK(Contacto__c )
)</errorConditionFormula>
    <errorDisplayField>Contacto__c</errorDisplayField>
    <errorMessage>Como la cuenta es personal debe seleccionar un contacto.</errorMessage>
</ValidationRule>